2008-01-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nxml/nxml-mode.el (nxml-mode): Use mode-line-process to indicate
	the use of degraded mode.
	(nxml-degrade): Don't change mode-name.

	* nxml/rng-nxml.el (rng-nxml-mode-init):
	Don't overwrite mode-line-process.

	* ibuffer.el (mode): Pass the buffer to format-mode-line.
	(ibuffer-update-mode-name): Remove.
	(ibuffer-redisplay, ibuffer-update, ibuffer-mode): Don't call it.
	(ibuffer-mode): Use mode-line-process instead.

	* ibuf-ext.el (ibuffer-auto-update-changed, ibuffer-auto-mode):
	Use derived-mode-p.
	(ibuffer-mark-by-mode-regexp): Pass the buffer to format-mode-line.

	* help.el (describe-mode): Pass the right buffer to format-mode-line.

2008-01-16  Glenn Morris  <rgm@gnu.org>

	* comint.el (comint-regexp-arg): Fix no-input case.

2008-01-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* smerge-mode.el (smerge-start-session): Rename from smerge-auto.
	* pcvs.el (cvs-revert-if-needed):
	* vc.el (vc-maybe-resolve-conflicts): Rename callers.

	* vc-svn.el (vc-svn-find-file-hook):
	* vc-arch.el (vc-arch-find-file-hook): Undo previous change.

2008-01-16  Ulf Jasper  <ulf.jasper@web.de>

	* calendar/icalendar.el (icalendar-version): Increase to 0.16.
	(icalendar-export-file, icalendar-import-file):
	Restore significant trailing whitespace in `interactive' prompts.

2008-01-16  Tom Tromey  <tromey@redhat.com>

	* calendar/icalendar.el (icalendar--convert-tz-offset)
	(icalendar--parse-vtimezone, icalendar--convert-all-timezones)
	(icalendar--find-time-zone): New functions.
	(icalendar--decode-isodatetime): Add `zone' argument, passed to
	`decode-time'.  Doc fix.
	(icalendar--convert-ical-to-diary): Compute zone-map.
	Pass timezone to icalendar--decode-isodatetime.

2008-01-16  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-vars.el (c-constant-symbol): Put this defun inside
	an eval-and-compile, so as to permit byte-compiling (e.g. in
	bootstrap).

2008-01-15  Stefan Monnier  <monnier@iro.umontreal.ca>
